# mvts-forecast

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: DESIGN.md
docs/decisions/: 0001-revin-input-window-only.md  0002-purge-embargo-walkforward.md  0003-onnx-serve-no-torch.md  0004-honest-null-vs-naive.md  0005-no-price-level-r2.md
src/mvtsforecast/: __init__.py  _exceptions.py  _manifest.py  _typing.py  _validation.py  cli.py  plots.py  serve.py  train.py
src/mvtsforecast/artifacts/: README.md  lstm.onnx  metrics.json  patchtst.onnx  transformer_vs.onnx
src/mvtsforecast/data/: __init__.py  loaders.py  synthetic.py
src/mvtsforecast/evaluation/: __init__.py  diebold_mariano.py  dsr.py  metrics.py  verdict.py
src/mvtsforecast/models/: __init__.py  arima.py  lstm.py  naive.py  onnx_runtime.py  patchtst.py  transformer_vs.py
src/mvtsforecast/windowing/: __init__.py  costs.py  revin.py  windows.py
tests/: conftest.py
tests/integration/: test_serve_pipeline.py  test_train_pipeline.py
tests/parity/: test_diebold_mariano.py  test_dsr_n_trials.py  test_onnx_torch_parity.py
tests/property/: test_windowing.py
tests/regression/: test_random_walk_anti_leakage.py  test_verdict_truth_table.py
tests/unit/: test_cli.py  test_import_purity.py  test_loaders.py  test_metrics.py  test_models_baseline.py  test_models_deep.py  test_onnx_runtime.py  test_plots.py  test_serve.py  test_synthetic.py
